Revert "fix button text so it wraps correctly (move code from _buttons.scss to _button-styles.scss)"
This reverts commit 158fefdbc56a11b894d42abe2929032bc35fa4e6.

--- a/www-root/style-assets/css/inner-style.css
+++ b/www-root/style-assets/css/inner-style.css
@@ -11375,8 +11375,6 @@ a.t4Edit-page:hover {
 
 .btn {
   transition: opacity 250ms ease-in-out;
-  text-align: left;
-  white-space: normal;
 }
 
 .btn:hover {
